# basic_rs

./: Cargo.toml  README.md  power.bas
basic2js/: Cargo.toml  README.md  js_optimize.sh
basic2js/example/: index.html  index.js
basic2js/src/: main.rs
basic2rs/: Cargo.toml
basic2rs/basrs/: Cargo.toml
basic2rs/src/: _Cargo.toml  _lib.rs  main.rs
basic2wasm/: Cargo.toml  README.md  arr.bas  game_of_life.bas  index.html  index.js  main.wasm  simple.bas  test.bas
basic2wasm/example/: game_of_life.wast  index.html  main.wasm  source.bas
basic2wasm/src/: main.rs  module.rs  runtime.wasm  runtime.wast  simple.bas
basic2wasm/src/codegen/: generate.rs  mod.rs
basic2wasm/src/compile/: control_flow_context.rs  error.rs  expr_compiler.rs  for_compiler.rs  global_defs.rs  mod.rs  non_loop.rs
basic2wasm/src/ir/: binaryen_macros.rs  builder.rs  codegen.rs  compiler.rs  control_flow.rs  expr_compiler.rs  mod.rs  runtime.rs
basic2wasm/src/ir/codegen/: generate.rs  mod.rs  runtime.rs
basic2wasm/src/ir/optimize/: demote_global.rs  mod.rs
basic2wasm/src/web/: index.js
benches/: pi.js  pi.py  pi_compiled.js  pi_sim.rs
docs/: IR.md  VM_perf.md  wasm_macro.md
keyword-token-derive/: Cargo.toml  README.md
keyword-token-derive/src/: lib.rs  states.rs
sample_programs/: batnum.bas  func_redefine.bas  game_of_life.bas  game_of_life_compact.bas  lin_solver.bas  loop.bas  pi.bas  stockmarket.bas
src/: dfa.js  error_print.rs  function.js  keyword.js  lib.rs  main.rs  parser.rs
src/_compiler/: anon_var.rs  array_dims.rs  error.rs  ir_labels.rs  mod.rs
src/ast/: display.rs  function.rs  keyword.rs  mod.rs  token.rs  variable.rs  visitor.rs
src/codegen/: mod.rs
src/compile/: compiler.rs  control_flow_context.rs  error.rs  expr_compiler.rs  for_compiler.rs  global_defs.rs  mod.rs  non_loop.rs
src/compiler/: array_dims.rs  compiler.rs  ctrl_line.rs  data.rs  error.rs  func_compiler.rs  ir_labels.rs  line_order.rs  mod.rs
src/ir/: builder.rs  mod.rs  visitor.rs
(+48 files in other folders)
