[package]
name = "basic_rs"
version = "0.1.0"
authors = ["Yiran Sheng <shengyiran@gmail.com>"]
edition = "2018"

[dependencies]
either = "1.5.0"
indoc = "0.2"
void = "1.0.2"
int_hash = "0.1.1"
nanbox = "0.2.0"
byteorder = "1.0.0"
num-traits = "0.2"
num-derive = "0.2"
unicode-width = "0.1.5"
structopt = "0.2.13"
