[package]
name = "basic_rs"
version = "0.1.0"
authors = ["Yiran Sheng <shengyiran@gmail.com>"]
edition = "2018"

[lib]
name = "basic_rs"
path = "src/lib.rs"

[[bin]]
name = "basic_rs"
path = "src/main.rs"

[[bench]]
name = "pi_sim"
harness = false

[dependencies]
either = "1.5.0"
rand = "0.6.1"
indoc = "0.2"
rustc-hash = "1.0.1"
nanbox = "0.2.0"
byteorder = "1.0.0"
num-traits = "0.2"
num-derive = "0.2"
unicode-width = "0.1.5"
structopt = "0.2.13"
matches = "0.1.8"
slotmap = "0.3.0"
void = "1.0.2"
cpuprofiler = "0.0.3"
petgraph = "0.4.13"
keyword-token-derive = { path = "keyword-token-derive" }
quickcheck = "0.8.0"

[dev-dependencies]
criterion = "0.2"

[profile.bench]
lto = true
