[package]
name = "basic2wasm"
version = "0.1.0"
authors = ["Yiran Sheng <shengyiran@gmail.com>"]
edition = "2018"

[dependencies]
indoc = "0.2"
binaryen = "0.5.0"
smallvec = "0.6.7"
slotmap = "0.3.0"
either = "1.5.0"
byteorder = "1.2.7"
structopt = "0.2.13"
rustc-hash = "1.0.1"
void = "1.0.2"
basic_rs = { path = "../" }
